fix gapping

--- a/src/app/loan-form/loan-form.component.scss
+++ b/src/app/loan-form/loan-form.component.scss
@@ -93,6 +93,7 @@ mat-error {
     .vl {
       width: 1%;
     }
+
     .calculation-container {
       width: 50%;
     }
@@ -102,6 +103,6 @@ mat-error {
     height: 500px;
   }
   .calc-text {
-    width: 70%;
+    width: 60%;
   }
 }
